--- a/src/css/style.css
+++ b/src/css/style.css
@@ -100,8 +100,19 @@ header {
   padding-top: 90px;
 }
 
+header ul li {
+  text-align: left;
+}
+
+header ul li:nth-child(3) {
+  margin-left: 14px;
+}
+
+header ul li:last-child {
+  margin-left: -30px;
+}
+
 header ul li a {
-  margin-right: 20px;
   font-weight: 500;
   color: black;
   font-size: 16px;
@@ -115,7 +126,6 @@ header ul li a:hover {
 
 .menu {
   padding-top: 16px;
-  margin-left: 150px;
 }
 
 .blue-button {
