--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -85,8 +85,17 @@ h6 {
 
 header {
     padding-top: 90px;
+
+    ul li {
+        text-align: left;
+    }
+    ul li:nth-child(3) {
+        margin-left: 14px;
+    }
+    ul li:last-child {
+        margin-left: -30px;
+    }
     ul li a {
-        margin-right: 20px;
         font-weight: 500;
         color: black;
         font-size: 16px;
@@ -99,7 +108,6 @@ header {
 
 .menu {
     padding-top: 16px;
-    margin-left: 150px;
 }
 
 .blue-button {
