--- a/src/css/style.css
+++ b/src/css/style.css
@@ -88,6 +88,10 @@ h6 {
   font-weight: inherit;
 }
 
+.applab-logo-text {
+  opacity: 0;
+}
+
 /*--------------------*/
 /*Header*/
 .container {
@@ -98,19 +102,22 @@ h6 {
 }
 
 header {
+  z-index: 100;
   padding-top: 90px;
+  position: relative;
+  background-color: #fff;
 }
 
 header ul li {
   text-align: left;
 }
 
-header ul li:nth-child(3) {
-  margin-left: 14px;
+header ul li:nth-child(2) {
+  margin-left: 20px;
 }
 
 header ul li:last-child {
-  margin-left: -30px;
+  margin-left: -8px;
 }
 
 header ul li a {
@@ -157,9 +164,13 @@ header ul li a:hover {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -webkit-box-pack: left;
+      -ms-flex-pack: left;
+          justify-content: left;
+}
+
+.btn-last {
+  padding-left: 170px;
 }
 
 /*--------------------*/
@@ -276,6 +287,7 @@ h3 {
 
 .jackpot {
   margin: 80px 0 120px 0;
+  background-color: #fff;
 }
 
 .feature-blocks {
@@ -329,6 +341,10 @@ h3 {
   background-size: contain;
   margin: 60px 0 100px 0;
   z-index: -10;
+}
+
+.customer-photo {
+  border-radius: 50%;
 }
 
 .carousel-item {
@@ -464,7 +480,7 @@ h3 {
 /*--------------------*/
 /*Footer*/
 .img-center {
-  margin-left: 38px;
+  margin: 0 0 0 18px;
 }
 
 footer {
@@ -557,7 +573,5 @@ footer ul {
   background-color: #fff;
 }
 
-/*--------------------*/
-/*Modal*/
 /*--------------------*/
 /*# sourceMappingURL=style.css.map */
