--- a/src/css/admin.scss
+++ b/src/css/admin.scss
@@ -36,6 +36,8 @@
     }
 }
 
+
+
 .admin-auth-text {
     text-align: center;
     color: red;
@@ -72,8 +74,27 @@
 /*Orders*/
 .filter-button {
     padding: 4px 10px 0px 10px;
-    border-bottom: 2px solid rgb(37, 0, 249);
+    border: 2px solid rgb(37, 0, 249);
     margin-right: 10px;
+    border-radius: 26px;
+    transition: .4s;
+    &:active,&:focus {
+        outline: none;
+        
+    }
+    &:hover {
+        background-color: orange;
+        p {
+            color: #fff;
+        }
+    }
+}
+.filter-button-active {
+    outline: none;
+    background-color: rgb(37, 0, 249);
+    p {
+        color: #fff;
+    }
 }
 .order-filters {
     margin: 40px auto;
@@ -86,7 +107,9 @@
     padding: 20px 10px;
 }
 .editing {
-    margin: 0 auto;
+    margin: 10px auto;
+
+    
 }
 
 .editing-form {
@@ -171,4 +194,111 @@
 .order-status-text-done {
     background-color: red;
 }
+/*--------------------*/
+
+/*progress bar*/
+.box
+{
+  background:#fff;
+  padding: 6px;
+  width:300px;
+  height:300px;
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  position:relative;
+  flex-direction:column;
+  box-shadow:0 30px 60px rgba(0,0,0,.4);
+  transition: transform .2s;
+  margin: 10px auto 34px;
+}
+/* .box:hover
+{
+ transform:scale(1.2);
+} */
+.box .percent
+{
+  width:150px;
+  height:150px;
+  position:relative;
+}
+.box .percent svg
+{
+  width:150px;
+  height:150px;
+  position:relative;
+}
+.box .percent svg circle
+{
+  width:150px;
+  height:150px;
+  fill:none;
+  stroke-width:10;
+  stroke:#000;
+  transform:translate(5px,5px);
+  stroke-linecap:round;
+}
+
+.percent-done {
+    stroke-dasharray:500;
+    stroke-dashoffset:500;
+}
+.box .percent svg circle:nth-child(1)
+{
+  stroke-dashoffset:0;
+  stroke:#f3f3f3;
+}
+.box .percent svg circle:nth-child(2)
+{
+  stroke-dashoffset:calc(440 - (440 * 87) / 100);
+  stroke:#03a9f4;
+}
+.box .percent .num
+{
+  top:0;
+  left:0;
+  width:100%;
+  height:100%;
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  position:absolute;
+  color:#111;
+}
+.box .percent .num h2
+{
+  font-size:48px;
+}
+.box .percent .num h2 span
+{
+  font-size:24px;
+}
+.box .text
+{
+  padding: 10px 0 0;
+  color:#999;
+  font-weight:700;
+  letter-spacing:1px;
+  font-size: 24px;
+}
+
+.percent-step-one {
+    stroke-dasharray:250;
+    stroke-dashoffset:500;
+}
+
+.percent-step-two {
+    stroke-dasharray:390;
+    stroke-dashoffset:500;
+}
+
+.percent-step-three {
+    stroke-dasharray:450;
+    stroke-dashoffset:500;
+}
+.percent-step-four {
+    stroke-dasharray:470;
+    stroke-dashoffset:500;
+}
+  
 /*--------------------*/
